--- a/Treasure Hunter/Treasure Hunter.CSharp.csproj
+++ b/Treasure Hunter/Treasure Hunter.CSharp.csproj
@@ -85,16 +85,18 @@
     <Compile Include="Assets\Assets\Scripts\Editor Extensions\ReadOnlyAttribute.cs" />
     <Compile Include="Assets\Assets\Scripts\Enemies\Base Classes\Enemy.cs" />
     <Compile Include="Assets\Assets\Scripts\Enemies\Enemy Types\EnemyTest.cs" />
+    <Compile Include="Assets\Assets\Scripts\Hero\Hero.cs" />
+    <Compile Include="Assets\Assets\Scripts\Hero\HeroSkills.cs" />
+    <Compile Include="Assets\Assets\Scripts\Hero\Player.cs" />
+    <Compile Include="Assets\Assets\Scripts\Hero\PlayerCombatInput.cs" />
+    <Compile Include="Assets\Assets\Scripts\Hero\PlayerInventory.cs" />
+    <Compile Include="Assets\Assets\Scripts\Hero\SkillDatabase.cs" />
     <Compile Include="Assets\Assets\Scripts\Interfaces\IDamageDealer.cs" />
     <Compile Include="Assets\Assets\Scripts\Interfaces\IDamageable.cs" />
     <Compile Include="Assets\Assets\Scripts\Interfaces\IKillable.cs" />
     <Compile Include="Assets\Assets\Scripts\Interfaces\IUIAction.cs" />
     <Compile Include="Assets\Assets\Scripts\Items\Weapons\BaseClass\Weapon.cs" />
     <Compile Include="Assets\Assets\Scripts\Movement\PlayerMovement.cs" />
-    <Compile Include="Assets\Assets\Scripts\Player\HeroSkills.cs" />
-    <Compile Include="Assets\Assets\Scripts\Player\Player.cs" />
-    <Compile Include="Assets\Assets\Scripts\Player\PlayerCombatInput.cs" />
-    <Compile Include="Assets\Assets\Scripts\Player\PlayerInventory.cs" />
     <Compile Include="Assets\Assets\Scripts\RPG System\Skills\Base\MagicSkill.cs" />
     <Compile Include="Assets\Assets\Scripts\RPG System\Skills\Base\PassiveSkill.cs" />
     <Compile Include="Assets\Assets\Scripts\RPG System\Skills\Base\PhysicalSkill.cs" />
