ActionBar to struct, IActionBar interface
Changed actionBar to Struct type to hold the logic of Action Bar better.
IActionBar interface shouldbe used by all entities having an Action Bar.
Also working on CombatUIController

--- a/Treasure Hunter/Treasure Hunter.CSharp.csproj
+++ b/Treasure Hunter/Treasure Hunter.CSharp.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Assets\Scripts\Hero\SkillDatabase.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IDamageDealer.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IDamageable.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IHasActionBar.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IKillable.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IPausable.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IUIAction.cs" />
