--- a/Treasure Hunter/Treasure Hunter.CSharp.csproj
+++ b/Treasure Hunter/Treasure Hunter.CSharp.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Assets\Scripts\Combat\Combat UI\Buttons\SelectTargetButton.cs" />
     <Compile Include="Assets\Scripts\Combat\Combat UI\CombatUI.cs" />
     <Compile Include="Assets\Scripts\Combat\Combat UI\CombatUIController.cs" />
-    <Compile Include="Assets\Scripts\Combat\Combat UI\CombatUIOffensiveActions.cs" />
+    <Compile Include="Assets\Scripts\Combat\Combat UI\CombatUIDefaultActions.cs" />
     <Compile Include="Assets\Scripts\Combat\Combat UI\CombatUiTargetSelection.cs" />
     <Compile Include="Assets\Scripts\Combat\Combat UI\ScrollableActionList.cs" />
     <Compile Include="Assets\Scripts\Combat\CombatController.cs" />
@@ -100,6 +100,8 @@
     <Compile Include="Assets\Scripts\Hero\PlayerCombatInput.cs" />
     <Compile Include="Assets\Scripts\Hero\PlayerInventory.cs" />
     <Compile Include="Assets\Scripts\Hero\SkillDatabase.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IActionButtonEventPublisher.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IActionButtonListener.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IDamageDealer.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IDamageable.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IHasActionBar.cs" />
