Oh yeah Battlestate and ActionState coming along
Done alot. FIxed ActionState enum in CombatUI to handle different
situations, interface ITargetable for Heroes & enemies, ITargetable
inherits from IDamageable.
Events seem to be running as expected

--- a/Treasure Hunter/Treasure Hunter.CSharp.csproj
+++ b/Treasure Hunter/Treasure Hunter.CSharp.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Assets\Scripts\Interfaces\IHasActionBar.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IKillable.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IPausable.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\ITargetable.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IUIAction.cs" />
     <Compile Include="Assets\Scripts\Items\Weapons\BaseClass\Weapon.cs" />
     <Compile Include="Assets\Scripts\Movement\PlayerMovement.cs" />
