--- a/Treasure Hunter/Treasure Hunter.CSharp.Editor.csproj
+++ b/Treasure Hunter/Treasure Hunter.CSharp.Editor.csproj
@@ -133,6 +133,8 @@
     <Compile Include="Assets\Editor\ImageEffects\TonemappingEditor.cs" />
     <Compile Include="Assets\Editor\ImageEffects\VignetteAndChromaticAberrationEditor.cs" />
     <Compile Include="Assets\Editor\ReadOnlyDrawer.cs" />
+    <Compile Include="Assets\Editor\ScriptableObjectFactory.cs" />
+    <Compile Include="Assets\Editor\ScriptableObjectWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
