--- a/Treasure Hunter/Treasure Hunter.CSharp.csproj
+++ b/Treasure Hunter/Treasure Hunter.CSharp.csproj
@@ -94,7 +94,7 @@
     <Compile Include="Assets\Scripts\Data Collections\StringsLibrary.cs" />
     <Compile Include="Assets\Scripts\Editor Extensions\ReadOnlyAttribute.cs" />
     <Compile Include="Assets\Scripts\Enemies\Base Classes\Enemy.cs" />
-    <Compile Include="Assets\Scripts\Enemies\Enemy Types\EnemyTest.cs" />
+    <Compile Include="Assets\Scripts\Event System\EnemyTest.cs" />
     <Compile Include="Assets\Scripts\Event System\Messages.cs" />
     <Compile Include="Assets\Scripts\Event System\Messenger.cs" />
     <Compile Include="Assets\Scripts\Hero\Hero.cs" />
